--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <p>Index.html</p>
+    <script>
+        fetch('/api/torneos')
+  .then(response => response.json())
+  .then(data => console.log(data));
+
+    </script>
 </body>
 </html>
