nuevos cambios en authentication para login/signup de usuarios

--- a/src/views/layouts/login.hbs
+++ b/src/views/layouts/login.hbs
@@ -1,5 +1,5 @@
 <h1>Sign in</h1>
-<form action="/login/password" method="post">
+<form action="/login/password" method="post"> <!-- redirect -->
     <section>
         <label for="username">Username</label>
         <input id="username" name="username" type="text" autocomplete="username" required autofocus>
