--- a/src/views/layouts/signup.hbs
+++ b/src/views/layouts/signup.hbs
@@ -1,12 +1,12 @@
 <h1>Sign up</h1>
-<form action="/signup" method="post">
+<form action="/signup" method="POST">
     <section>
         <label for="username">Username</label>
-        <input id="username" name="correo" type="text" autocomplete="username" required>
+        <input id="username" name="username" type="text" autocomplete="username" required>
     </section>
     <section>
-        <label for="new-password">Password</label>
-        <input id="new-password" name="contrasena" type="password" autocomplete="new-password" required>
+        <label for="password">Password</label>
+        <input id="password" name="password" type="password" autocomplete="new-password" required>
     </section>
     <button type="submit">Sign up</button>
 </form>
