--- a/src/views/layouts/signup.hbs
+++ b/src/views/layouts/signup.hbs
@@ -2,7 +2,7 @@
 <form action="/signup" method="POST">
     <section>
         <label for="username">Username</label>
-        <input id="username" name="username" type="text" autocomplete="username" required>
+        <input id="correo" name="correo" type="text" autocomplete="username" required>
     </section>
     <section>
         <label for="password">Password</label>
