--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,15 +1,155 @@
-li {
-    font-size: 2rem;
-    width: 300px;
-    margin: 4px;
-    padding: 4px;
-    list-style: none
-}
+body{
+        font-family: Sans-serif;
+        margin: 0px;
+        background-image: url(./fondo.jpg);
+        background-size: cover;
+        color: white;
+      }
+      header{
+        position: sticky;
+        top: 0;
+        color: black;
+        background-color: #A45ED5;
+        height: 10%;
+        padding: 0 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: bold;
+      }
+      header > div{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
 
-.midlaner {
-    background-color: #eeeeee
-}
+      header > div:nth-child(2) > a > img{
+        width: 35px;
+        margin-right: 10px;
+      }
 
-.toplaner {
-    background-color: #ffea00
-}
+      header > div:nth-child(3) > a > img{
+        width: 25px;
+        margin-right: 10px;
+      }
+
+      nav{
+        padding: 16px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin: 15px 20%;
+      }
+
+      nav > a{
+        padding: 20px 50px;
+        font-size: 30px;
+        font-style: bold;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+        background-color: #A45ED5;
+      }
+      nav > a:hover{
+        color: White;
+        background-color: #404040;
+      }
+
+      nav > a > img{
+        height: 50px;
+        margin-right: 10px;
+        vertical-align:middle
+      }
+
+      #slider{
+        background-color: #404040;
+        padding: 5px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin: 2% 0;
+      }
+
+      #banners{
+        width: 72.5%;
+      }
+
+      .tab{
+        width: 27.5%;
+      }
+
+      #slider > div.tab > div > button{
+        padding: 10% 5%;
+        font-size: 2.1em;
+        font-style: bold;
+        text-decoration: none;
+        color: White;
+        background-color: #404040;
+        width: 100%;
+      }
+
+      #slider > div.tab > div > button:hover, #slider > div.tab > div > button.active{
+        color: black;
+        background-color: #A45ED5;
+      }
+
+      #banners > div.tabcontent > img{
+        width: 100%;
+      }
+
+      table#recomendados{
+        width: 50%;
+        margin: 0 25%;
+      }
+
+      #recomendados > tbody > tr:nth-child(1) > th{
+        color: black;
+        background-color: #A45ED5;
+        padding: 20px;
+        padding-left: 45px;
+        padding-right: 45px;
+        font-size: 30px;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td{
+        border: solid transparent 5px;
+        background-color: #404040;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(1){
+        width: 15%;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(2){
+        width: 25%;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(3){
+        width: 40%;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(4){
+        width: 20%;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(4) > a > button{
+        padding: 10px 35px;
+        font-size: 20px;
+        font-style: bold;
+        font-weight: bold;
+        text-decoration: none;
+        color: black;
+        background-color: #A45ED5;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td:nth-child(4) > a > button:hover{
+        color: White;
+        background-color: #404040;
+      }
+
+      #recomendados > tbody > tr:not(:first-child) > td > img{
+        width: 100%;
+      }
