--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,7 +1,7 @@
 body{
         font-family: Sans-serif;
         margin: 0px;
-        background-image: url(./fondo.jpg);
+        background-image: url(./fotos/fondo.jpg);
         background-size: cover;
         color: white;
       }
