--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -13,20 +13,20 @@
           
         </div>
         <div>
-          <a href=""><img src="./iconos/logo.png"></a>
+          <a href=""><img src="./fotos/iconos/logo.png"></a>
         </div>
         <div>
-          <a href=""><img src="./iconos/search.png"></a>
-          <a href=""><img src="./iconos/torneo.png"></a>
-          <a href=""><img src="./iconos/amigos.png"></a>
-          <a href=""><img src="./iconos/user.png"></a>
+          <a href=""><img src="./fotos/iconos/search.png"></a>
+          <a href=""><img src="./fotos/iconos/torneo.png"></a>
+          <a href=""><img src="./fotos/iconos/amigos.png"></a>
+          <a href=""><img src="/fotos./iconos/user.png"></a>
         </div>
     </header>
 
     <nav>
-        <a href="#"><img src="./iconos/torneo.png">Trneos</a></li>
-        <a href="#"><img src="./iconos/espadas.png">Equipos</a></li>
-        <a href="#"><img src="./iconos/amigos.png">Amigos</a></li>
+        <a href="#"><img src="./fotos/iconos/torneo.png">Trneos</a></li>
+        <a href="#"><img src="./fotos/iconos/espadas.png">Equipos</a></li>
+        <a href="#"><img src="./fotos/iconos/amigos.png">Amigos</a></li>
     </nav>
 
     
@@ -56,7 +56,7 @@
 
       <div id= banners>
         <div class="tabcontent" id="uno">
-          <img src="./banner/rainbowsixsiege.jpg">
+          <img src="./fotos/banner/rainbowsixsiege.jpg">
         </div>
 
 
@@ -88,7 +88,7 @@
                 <th colspan="4">Torneos Recomendados</th>
             </tr>
             <tr>
-                <td><img src="./portadas/fortnite.jpg"></td>
+                <td><img src="./fotos/portadas/fortnite.jpg"></td>
                 <td>
                   <h1>TorneoX</h1>
                   Organizado por: XXXX<br>
@@ -103,7 +103,7 @@
                 </td>
             </tr>
             <tr>
-                <td><img src="./portadas/fortnite.jpg"></td>
+                <td><img src="./fotos/portadas/fortnite.jpg"></td>
                 <td>
                   <h1>TorneoX</h1>
                   Organizado por: XXXX<br>
@@ -118,7 +118,7 @@
                 </td>
             </tr>
             <tr>
-                <td><img src="./portadas/fortnite.jpg"></td>
+                <td><img src="./fotos/portadas/fortnite.jpg"></td>
                 <td>
                   <h1>TorneoX</h1>
                   Organizado por: XXXX<br>
