--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -13,18 +13,18 @@
           
         </div>
         <div>
-          <a href=""><img src="./fotos/iconos/logo.png"></a>
+          <a href=""><img id="logo" src="./fotos/iconos/logo.png"></a>
         </div>
         <div>
           <a href=""><img src="./fotos/iconos/search.png"></a>
           <a href=""><img src="./fotos/iconos/torneo.png"></a>
           <a href=""><img src="./fotos/iconos/amigos.png"></a>
-          <a href=""><img src="/fotos./iconos/user.png"></a>
+          <a href=""><img src="./fotos/iconos/user.png"></a>
         </div>
     </header>
 
     <nav>
-        <a href="#"><img src="./fotos/iconos/torneo.png">Trneos</a></li>
+        <a href="#"><img src="./fotos/iconos/torneo.png">Torneos</a></li>
         <a href="#"><img src="./fotos/iconos/espadas.png">Equipos</a></li>
         <a href="#"><img src="./fotos/iconos/amigos.png">Amigos</a></li>
     </nav>
