--- a/src/views/layouts/header.hbs
+++ b/src/views/layouts/header.hbs
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./header.css">
 </head>
 <body>
-    
+
 </body>
 </html>
 
-<nav>
+<nav id="header">
 
     <div id="navLeftDiv">
         <a href=""><img class="navIcon" src="./fotos/iconos/search.png"></a>
@@ -44,5 +44,5 @@
         </div>
 
     </div>
-    
+
 </nav>
