nuevos cambios en las rutas relacionadas a torneos

--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -8,134 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
-    <header>
-        <div>
-          
-        </div>
-        <div>
-          <a href=""><img id="logo" src="./fotos/iconos/logo.png"></a>
-        </div>
-        <div>
-          <a href=""><img src="./fotos/iconos/search.png"></a>
-          <a href=""><img src="./fotos/iconos/torneo.png"></a>
-          <a href=""><img src="./fotos/iconos/amigos.png"></a>
-          <a href=""><img src="./fotos/iconos/user.png"></a>
-        </div>
-    </header>
-
-    <nav>
-        <a href="#"><img src="./fotos/iconos/torneo.png">Torneos</a></li>
-        <a href="#"><img src="./fotos/iconos/espadas.png">Equipos</a></li>
-        <a href="#"><img src="./fotos/iconos/amigos.png">Amigos</a></li>
-    </nav>
-
-    
-
-
-    <div id="slider">
-      <script>
-
-          document.getElementById("defaultOpen").click();
-          
-          function openTab(evt, cityName) {
-              var i, tabcontent, tablinks;
-              tabcontent = document.getElementsByClassName("tabcontent");
-              for (i = 0; i < tabcontent.length; i++) {
-                  tabcontent[i].style.display = "none";
-              }
-              tablinks = document.getElementsByClassName("tablinks");
-              for (i = 0; i < tablinks.length; i++) {
-                  tablinks[i].className = tablinks[i].className.replace("active", "");
-              }
-              document.getElementById(cityName).style.display = "block";
-              evt.currentTarget.className += "active";
-          }
-          
-      </script>
-      
-
-      <div id= banners>
-        <div class="tabcontent" id="uno">
-          <img src="./fotos/banner/rainbowsixsiege.jpg">
-        </div>
-
-
-        <div class="tabcontent" id="dos" style="display: none;">
-          dos
-        </div>
-
-        <div class="tabcontent" id="tres" style="display: none;">
-          tres
-        </div>
-      </div>
-      <div class="tab">
-        <div>
-          <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'uno')">Rainbow Six Siedge</button>
-        </div>
-        <div>
-          <button class="tablinks" onclick="openTab(event, 'dos')">Torneos diarios</button>
-        </div>
-        <div>
-          <button class="tablinks" onclick="openTab(event, 'tres')">Call of Duty</button>
-        </div>
-         
-      </div>
-    </div>
-
-    <div>
-        <table id="recomendados">
-            <tr>
-                <th colspan="4">Torneos Recomendados</th>
-            </tr>
-            <tr>
-                <td><img src="./fotos/portadas/fortnite.jpg"></td>
-                <td>
-                  <h1>TorneoX</h1>
-                  Organizado por: XXXX<br>
-                  <h3>Juego: X</h3>
-                </td>
-                <td>Descripción: <br>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and...
-                </td>
-                <td>
-                  Miembros 100 / 200<br>
-                  <a href=""><button>Unirme</button></a>
-                </td>
-            </tr>
-            <tr>
-                <td><img src="./fotos/portadas/fortnite.jpg"></td>
-                <td>
-                  <h1>TorneoX</h1>
-                  Organizado por: XXXX<br>
-                  <h3>Juego: X</h3>
-                </td>
-                <td>Descripción: <br>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and...
-                </td>
-                <td>
-                  Miembros 100 / 200<br>
-                  <a href=""><button>Unirme</button></a>
-                </td>
-            </tr>
-            <tr>
-                <td><img src="./fotos/portadas/fortnite.jpg"></td>
-                <td>
-                  <h1>TorneoX</h1>
-                  Organizado por: XXXX<br>
-                  <h3>Juego: X</h3>
-                </td>
-                <td>Descripción: <br>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and...
-                </td>
-                <td>
-                  Miembros 100 / 200<br>
-                  <a href=""><button>Unirme</button></a>
-                </td>
-            </tr>
-      </table>
-    </div>
-    <footer>
-      <p>Footer</p>
-    </footer>
+    {{{body}}}
+    {{> listaTorneos}}
   </body>
 <html>
