--- a/src/views/torneos/registroTorneo.html
+++ b/src/views/torneos/registroTorneo.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de torneo</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./registroTorneo.css">
+    <link rel="stylesheet" type="text/css"  href="/style.css">
+    <link rel="stylesheet" type="text/css"  href="/registroTorneo.css">
 </head>
 <body>
 
