--- a/src/views/layouts/signup.hbs
+++ b/src/views/layouts/signup.hbs
@@ -1,12 +1,65 @@
-<h1>Sign up</h1>
-<form action="/signup" method="POST">
-    <section>
-        <label for="username">Username</label>
-        <input id="correo" name="correo" type="text" autocomplete="username" required>
-    </section>
-    <section>
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password" autocomplete="new-password" required>
-    </section>
-    <button type="submit">Sign up</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicia Sesión</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./sign-login.css">
+</head>
+<body>
+
+    {{> header}}
+
+<div id="content">
+
+    <div id="regFormDiv">
+        <span id="formTitle">Sign up</span>
+        <form action="/signup" method="POST">
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Nombre</span>
+                <input id="nombre" name="nombre" type="text" autocomplete="nombre">
+              </div>
+            </div>
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Apellido</span>
+                <input id="apellido" name="apellido" type="text" autocomplete="apellido">
+              </div>
+            </div>
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Username</span>
+                <input id="username" name="username" type="text" autocomplete="username">
+              </div>
+            </div>
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Correo Electrónico</span>
+                <input id="email" name="email" type="email" autocomplete="email" required>
+              </div>
+            </div>
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Password</span>
+                <input id="password" name="password" type="password" autocomplete="new-password" required>
+              </div>
+            </div>
+            <div class="regBody">
+              <div class="regFormRow">
+                <span class="regFormLabel">Telefono</span>
+                <input id="telefono" name="telefono" type="tel" autocomplete="telefono" >
+              </div>
+            </div>
+            <div>¿Ya tienes cuenta? <a id="crear" href="/login">Inicia Sesión</a></div><br>
+            <button id="formSubmitButton" type="submit">Sign up</button>
+        </form>
+    </div>
+    </div>
+
+    {{> footer}}
+
+</body>
+</html>
