--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -21,7 +21,7 @@
     </div>
 
     <div id="navMidDiv">
-        <a href=""><img id="logo" src="./fotos/iconos/logo.png"></a>
+        <a href="/"><img id="logo" src="./fotos/iconos/logo.png"></a>
     </div>
 
     <div id="navRightDiv" class="center">
@@ -31,7 +31,7 @@
             <img class="navIcon" src="./fotos/iconos/user.png">
             <div id="userDropMenu">
                 <div class="userDropRow">
-                    <a class="navLink" href="">Ajustes de cuenta</a>
+                    <a class="navLink" href="/login">Iniciar sesión</a>
                 </div>
                 <div class="userDropRow">
                     <label for="darkMode">Tema claro</label>
