--- a/src/public/sign-login.css
+++ b/src/public/sign-login.css
@@ -1,4 +1,4 @@
-input, textarea {
+input{
     outline: none;
     border: none;
     background: var(--bgAlpha2);
@@ -10,36 +10,17 @@ input, textarea {
     border: 1px solid var(--bgAlpha2);
     transition: border-color 100ms;
 }
-input:hover, textarea:hover {
+input:hover{
     border-color: var(--highlightLight);
 }
-input:active, textarea:active {
+input:active{
     border-color: var(--highlightDark);
 }
 
-textarea {
-    height: 120px;
-    width: 500px;
+a{
+    color: #A45ED5;
+    text-decoration: none;
 }
-
-select {
-    height: 30px;
-    outline: none;
-    color: var(--text1);
-    background: var(--bgAlpha2);
-    border: 1px solid #A45ED5;
-    border-radius: 3px;
-    transition: border-color 100ms;
-    -webkit-appearance: none;
-    padding: 5px;
-}
-select:hover {
-    border-color: var(--highlightLight);
-}
-select:active {
-    background-color: var(--bg2);
-}
-
 
 #content {
     display: flex;
@@ -49,16 +30,16 @@ select:active {
 }
 
 #regFormDiv {
-    background-color: var(--bgLight);
+    border: solid 20px var(--bgLight);
+    background-color: var(--bgPage);
     display: flex;
     flex-direction: column;
     border-radius: 20px;
     width: 100%;
-    max-width: 1400px;
+    max-width: 500px;
     padding: 20px 60px;
     gap: 30px;
 }
-
 
 #formTitle {
     font-size: 32px;
@@ -68,25 +49,9 @@ select:active {
     text-align: center;
 }
 
-
-.regHeader {
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-    width: 100%;
-    height: 40px;
-    background-color: var(--bgDark);
-    color: var(--text2);
-    text-transform: uppercase;
-    font-weight: bold;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-
 .regBody {
     width: 100%;
     padding: 10px;
-    background-color: var(--bgPage);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     display: flex;
@@ -99,7 +64,7 @@ select:active {
 }
 
 .regFormLabel {
-    width: 300px;
+    margin-right: 2%;
     font-size: 18px;
     font-weight: bold;
 }
@@ -107,7 +72,7 @@ select:active {
 #formSubmitButton {
     background-color: var(--bgPage);
     border-radius: 5px;
-    border: 2px solid var(--highlightLight);
+    border: 2px solid #A45ED5;
     color: var(--text1);
     font-size: 14px;
     font-weight: bold;
