listatorneos y detalleTorneos.hbs agreagados

--- a/src/views/layouts/detalleTorneo.hbs
+++ b/src/views/layouts/detalleTorneo.hbs
@@ -1,3 +1,6 @@
-<div>
-    {{ descripcion}}
-</div>
+ {{#each torneo }}
+    <div>
+        {{ nombre }}, {{ numero_torneo}}, {{ fecha_creacion}}, {{ fecha_comienzo}}, {{ descripcion }}, {{ juego }}, {{ participantes }}, {{ estado }}
+        <a href="/torneos/detalleTorneo/{{id_torneo}}">Únete</a>
+    </div>
+{{/each }}
