--- a/src/views/layouts/profile.hbs
+++ b/src/views/layouts/profile.hbs
@@ -1,3 +1,26 @@
 <div>
      {{> header}}
 </div>
+<div>
+      {{#each torneos }}
+     <tr>
+          <td><img src="./fotos/portadas/{{ juego }}.jpg"></td>
+          <td>
+               <h1>{{ nombre }}</h1>
+               <script>
+                    var data = new Date("{{ fecha_comienzo}}");
+                    document.getElementById("fecha").innerHTML = "Comienza el: " + data.toLocaleDateString();
+               </script>
+               <div id="fecha"></div><br>
+               <h3>Juego: {{ juego }}</h3>
+          </td>
+          <td>Descripción: <br>
+               {{ descripcion }}
+          </td>
+          <td>
+               Miembros: {{ participantes }} / 200<br>
+               <a href="/torneos/detalleTorneo/{{id_torneo}}"><button>Únete</button></a>
+          </td>
+     </tr>
+     {{/each }}
+</div>
