sign up actualizado

--- a/src/views/layouts/signup.hbs
+++ b/src/views/layouts/signup.hbs
@@ -13,7 +13,7 @@
     {{> header}}
 
 <div id="content">
-
+  
     <div id="regFormDiv">
         <span id="formTitle">Sign up</span>
         <form action="/signup" method="POST">
@@ -26,7 +26,7 @@
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Apellido</span>
-                <input id="apellido" name="apellido" type="text" autocomplete="apellido">
+                <input id="apellido" name="alias" type="text" autocomplete="apellido">
               </div>
             </div>
             <div class="regBody">
@@ -38,7 +38,7 @@
             <div class="regBody">
               <div class="regFormRow">
                 <span class="regFormLabel">Correo Electrónico</span>
-                <input id="email" name="email" type="email" autocomplete="email" required>
+                <input id="email" name="correo" type="email" autocomplete="email" required>
               </div>
             </div>
             <div class="regBody">
